@@ -1,3 +1,7 @@
+2013-12-05  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_qsc.c: Add QSC projection (#179)
+
 2013-10-27  Frank Warmerdam  <warmerdam@gdal-c>
 
 	* Prepare 4.9.0beta2 release.
